--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -5,9 +5,11 @@
 
 .home_image {
 	width: 100%;
+	margin-bottom:-150px;
 }
 
 .home_row {
 	display:flex;
-	flex-wrap:wrap;
+	align-items: center;
+	justify-content:center;
 }
