--- a/src/components/css/Home.css
+++ b/src/components/css/Home.css
@@ -13,3 +13,33 @@
 	align-items: center;
 	justify-content:center;
 }
+
+
+@media only screen and (max-width: 360px) {
+	
+	.home_image {
+	width: 100%;
+	margin-bottom:-50px;
+	}
+
+	.home_row {
+		display:flex;
+		align-items: center;
+		justify-content:center;
+		flex-direction: column;
+	}
+}
+
+
+@media only screen and (max-width: 600px) {
+	.home_image {
+	width: 100%;
+	margin-bottom:-50px;
+	}
+	.home_row {
+		display:flex;
+		align-items: center;
+		justify-content:center;
+		flex-direction: column;
+	}
+}
